[package]
name = "xmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.4"
machine-uid = "0.5"
sysinfo = "0.32"
chrono = "0.4"
users = "0.11"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
