[package]
name = "xmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.4"
machine-uid = "0.5"
sysinfo = "0.32"
chrono = "0.4"
users = "0.11"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
